webmapclient: - style changes according to scrollbar issue on firefox

--- a/src/main/webapp/frontend/css/style.css
+++ b/src/main/webapp/frontend/css/style.css
@@ -92,6 +92,3 @@ p.load_icon_webmap{   background-color: transparent;
     overflow: visible;
     visibility: visible;
     display: block;}
-.x-form-element{padding-left:3px !important;}
-input.x-form-text{width:255px !important;}
-textarea.x-form-field{width:255px !important;}
